@@ -486,9 +486,9 @@
 				<texture>$VAR[VideoRating]</texture>
 				<aspectratio>keep</aspectratio>
 			</control>
-			<!-- TV show Logo -->
+			<!-- Logo -->
 			<control type="group">
-				<visible>[Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes)]</visible>
+				<visible>[Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes)]</visible>
 				<control type="image" id="37016">
 					<posx>17</posx>
 					<posy>412</posy>
